--- a/index.html
+++ b/index.html
@@ -7,34 +7,37 @@
     <title>Momentum App</title>
   </head>
   <body>
-    <form id="login-form">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <input type="submit" value="Log In" />
-    </form>
-    <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
-    <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press Enter" />
-    </form> 
-    <ul id="todo-list">
-    </ul>
-    <div id="quote">
-      <span></span>
-      <span></span>
+    <div id="ImgBox" class="flex">  
+      <h2 id="clock">00:00:00</h2>
+      <form id="login-form">
+        <input
+          required
+          maxlength="15"
+          type="text"
+          placeholder="What is your name?"
+        />
+        <input type="submit" value="Log In" />
+      </form>
+      <h1 id="greeting" class="hidden"></h1>
+      <form id="todo-form" class="hidden">
+        <input type="text" placeholder="Write a To Do and Press Enter" />
+      </form> 
+
+      <ul id="todo-list">
+      </ul>
+      <div id="quote">
+        <span></span>
+        <span></span>
+      </div>
+      <div id="weather">
+        <span></span>
+        <span></span>
+      </div>
     </div>
-    <div id="weather">
-      <span></span>
-      <span></span>
-    </div>
+    <script src="js/background.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
-    <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
   </body>
